--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 
 <head>
-  <title>GraphQL Rails Blog</title>
-  <meta name="description" content="GraphQL Rails Blog">
+  <title>Woahstork Test</title>
+  <meta name="description" content="Woahstork Test">
   <meta charset="utf-8">
   <meta name="theme-color" content="#000000">
 
